--- a/src/app/page/landing-layout/home-page/home-page.component.scss
+++ b/src/app/page/landing-layout/home-page/home-page.component.scss
@@ -364,3 +364,17 @@
     }
   }
 }
+
+@media only screen and (max-width: 767px) {
+      /* CSS rules for mobile screens */
+      .mobile {
+        display: inline-block;
+      }
+    }
+
+    @media (min-width: 1025px) {
+  /* Styles for desktop screens */
+  .mobile {
+        display: none;
+      }
+}
