--- a/src/app/component/card/contact-information-card/contact-information-card.component.html
+++ b/src/app/component/card/contact-information-card/contact-information-card.component.html
@@ -30,7 +30,7 @@
             allowfullscreen=""
             height="150"
             loading="lazy"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d64951.63940434154!2d24.733136056753118!3d59.42075308169104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692eb56f7499f61%3A0x9b763650c08a5bcd!2sSepapaja%206%2C%2011415%20Tallinn%2C%20Estonya!5e0!3m2!1str!2str!4v1638161808599!5m2!1str!2str"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3743.1245778779353!2d85.7936281734071!3d20.253667513951996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a19a70048b4f94f%3A0x2f431c5a2c39762!2sXdil!5e0!3m2!1sen!2sin!4v1750287848584!5m2!1sen!2sin"
             style="border: 0"
             title="Address Information"
             width="100%"></iframe>
